# OpenPigeonQT

./: .gitignore  CMakeLists.txt  README.md  buildMingW.bat
include/: ftp_client.hpp
include/utils/: Logger.hpp
src/: CMakeLists.txt  main.cpp
src/core/: FtpClient.cpp
src/system/: ftp_client.cpp
src/utils/: Logger.cpp
